Fixes arrows on mobile

--- a/resources/css/_dt_arrows.scss
+++ b/resources/css/_dt_arrows.scss
@@ -1,12 +1,14 @@
-.fp-section{
-   .fp-controlArrow {
-        &.fp-prev {
-            left: 3rem;
-            border-color: transparent rgba(232, 232, 232, 0.85) transparent transparent;
-        }
-        &.fp-next {
-            right: 3rem;
-            border-color: transparent transparent transparent rgba(232, 232, 232, 0.85);
+@media screen and (min-width: 768px) {
+    .fp-section{
+       .fp-controlArrow {
+            &.fp-prev {
+                left: 3rem;
+                border-color: transparent rgba(232, 232, 232, 0.85) transparent transparent;
+            }
+            &.fp-next {
+                right: 3rem;
+                border-color: transparent transparent transparent rgba(232, 232, 232, 0.85);
+            }
         }
     }
 }
